feat(): Delete unused code